Stop movement of whole page when expand/collapse the item cards

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -22,7 +22,7 @@ body {
   max-width: 300 * $unit;
   margin-right: auto;
   margin-left: auto;
-  padding: 1 * $unit 40 * $unit 0 40 * $unit;
+  //padding: 1 * $unit 40 * $unit 0 40 * $unit;
   justify-content: center;
 
   @media (max-width: $breakpoint-vertical) {
@@ -798,7 +798,7 @@ ErrorMessage
   background-color: #4a90e2;
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: (1 * $unit) 0 (1 * $unit) (1 * $unit);
   text-align: center;
   text-decoration: none;
   display: inline-block;
